# portsy

./: AGENTS.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
crates/portsy-core/: Cargo.toml
crates/portsy-core/src/: lib.rs
src/: app.css  app.model.test.ts  app.model.ts  app.provider.tsx  app.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: PortsyMainView.tsx  PortsyPanel.test.tsx  PortsyPanel.tsx  PortsyPanels.test.tsx  PortsySettingsView.tsx  PortsyStatusMessage.tsx  PortsyUi.tsx
src/lib/: tauri.ts  types.ts  utils.test.ts  utils.ts
src/routes/: home.tsx  settings.tsx
